🔧- Added commands and backend stuff
- Added /stop command
- Added an event handler for the discord-player lib.
- Code cleanup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@discord-player/extractor": "^3.0.2",
     "@discordjs/builders": "^0.6.0",
     "@discordjs/opus": "discordjs/opus",
     "@discordjs/rest": "^0.1.0-canary.0",
