--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discord-api-types": "^0.23.1",
     "discord-player": "^5.1.0",
     "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "timers": "^0.1.1"
   },
   "scripts": {
     "start": "node ./src/index.js"
